[project]
name = "qiskit-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pylatexenc>=2.10",
    "qiskit>=2.1.2",
    "qiskit-aer>=0.17.1",
    "qiskit-ibm-runtime>=0.41.1",
]
